tests/snapshots/shopping_list_characterization_test__markdown_output.snap
---
source: tests/shopping_list_characterization_test.rs
expression: "run(&base_fixture(), &[\"-f\", \"markdown\", \"pasta.cook\", \"salad.cook\"])"
---
# produce
- *5* tomatoes
- *1 head* lettuce
- *2 cloves* garlic

# dairy
- *1500 ml* milk

# dry goods
- *200 g* pasta
- *1 c, 200 g* flour

# condiments
- *3 tbsp* olive oil

# spices
- *2 tsp* salt

# other
- *2 l* water
