tests/snapshots/shopping_list_characterization_test__multiple_recipes_aggregated.snap
---
source: tests/shopping_list_characterization_test.rs
expression: "run(&base_fixture(), &[\"pasta.cook\", \"salad.cook\"])"
---
[produce]
tomatoes  5
lettuce   1 head
garlic    2 cloves
[dairy]
milk      1500 ml
[dry goods]
pasta     200 g
flour     1 c, 200 g
[condiments]
olive oil 3 tbsp
[spices]
salt      2 tsp
[other]
water     2 l
