tests/snapshots/shopping_list_characterization_test__plain_suppresses_categories.snap
---
source: tests/shopping_list_characterization_test.rs
expression: "run(&base_fixture(), &[\"--plain\", \"pasta.cook\", \"salad.cook\"])"
---
pasta     200 g
water     2 l
salt      2 tsp
garlic    2 cloves
olive oil 3 tbsp
tomatoes  5
flour     1 cup, 200 g
milk      1 l, 500 ml
lettuce   1 head
