tests/snapshots/shopping_list_characterization_test__scaling_factor_in_recipe_name.snap
---
source: tests/shopping_list_characterization_test.rs
expression: "run(&base_fixture(), &[\"pasta.cook:3\"])"
---
[produce]
tomatoes  9
garlic    6 cloves
[dairy]
milk      1.5 l
[dry goods]
pasta     600 g
flour     600 g
[condiments]
olive oil 6 tbsp
[spices]
salt      1 tbsp
[other]
water     6 l
